# osquery-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  release.toml  sre_review.md
.beads/: issues.jsonl
.claude/: CLAUDE.md  SPEC_CONFIG_LOGGER_PLUGINS.md
.claude/commands/: prime.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  integration.yml
.hooks/: pre-commit
docker/: Dockerfile.test
examples/config-file/: Cargo.toml  README.md
examples/config-file-events/: Cargo.toml  README.md
examples/config-file-events/src/: cli.rs  main.rs
examples/config-file/src/: cli.rs  main.rs
examples/config-static/: Cargo.toml
examples/config-static/src/: cli.rs  main.rs
examples/logger-file/: Cargo.toml  README.md
examples/logger-file/src/: cli.rs  main.rs
examples/logger-syslog/: Cargo.toml  README.md
examples/logger-syslog/src/: cli.rs  main.rs
examples/table-proc-meminfo/: Cargo.toml
examples/table-proc-meminfo/src/: cli.rs  main.rs
examples/two-tables/: Cargo.toml
examples/two-tables/src/: main.rs  t1.rs  t2.rs
examples/writeable-table/: Cargo.toml
examples/writeable-table/src/: main.rs
hooks/: pre-commit
osquery-rust/: Cargo.toml
osquery-rust-codegen/src/: cli.rs  lib.rs
osquery-rust/src/: client.rs  lib.rs  server.rs  server_tests.rs  shutdown.rs  util.rs
osquery-rust/src/_osquery/: osquery.rs
osquery-rust/src/client/: mod.rs  thrift_client.rs  trait_def.rs
osquery-rust/src/plugin/: mod.rs
osquery-rust/src/plugin/_enums/: mod.rs  plugin.rs  registry.rs  response.rs
osquery-rust/src/plugin/_traits/: osquery_plugin.rs
osquery-rust/src/plugin/config/: mod.rs
osquery-rust/src/plugin/logger/: README.md  log_severity.rs  log_status.rs  logger_features.rs  logger_plugin.rs  logger_wrapper.rs  mod.rs
osquery-rust/src/plugin/table/: column_def.rs  mod.rs  mod.rs.bak  query_constraint.rs  request_handler.rs  results.rs  table_plugin.rs  traits.rs
osquery-rust/src/server/: core.rs  event_loop.rs  handler.rs  lifecycle.rs  mod.rs  registry.rs  signal_handler.rs  stop_handle.rs
osquery-rust/tests/: integration_test.rs  listener_wake_pattern.rs  osquery_container.rs  plugin_lifecycle.rs  server_shutdown.rs  test_client_docker.rs  test_integration_docker.rs  thrift_protocol.rs
scripts/: build-test-image.sh  ci-test.sh  coverage.sh
