[package]
name = "osquery-rust"
version = "0.1.4"
authors = [
    "Tobias Mucke <tobias.mucke@gmail.com>",
]
description = "Rust bindings for Osquery"
keywords = ["osquery", "binding"]
categories = [
    "api-bindings",
    "command-line-utilities",
]
homepage = "https://github.com/polarlabs"
repository = "https://github.com/polarlabs/osquery-rust"
readme = "README.md"
documentation = "https://docs.rs/osquery-rust"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"

[lib]
name = "osquery_rust"
path = "src/lib.rs"

[dependencies]
# Clap version string according to Clap compatibility policy
clap = { version = "^4.5.4", features = ["cargo", "derive"] }

strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }
thrift = { version = "0.17.0" }
log = "0.4.27"
env_logger = "0.11.8"
bitflags = "2.9.0"
enum_dispatch = "0.3.13"
