[package]
name = "osquery-rust-ng"
version = "2.0.0"
authors = [
    "Tobias Mucke <tobias.mucke@gmail.com>",
    "Ryan Stortz <ryan@withzombies.com>"
]
description = "Rust bindings for Osquery"
keywords = ["osquery", "binding"]
categories = [
    "api-bindings",
    "command-line-utilities",
]
homepage = "https://github.com/withzombies"
repository = "https://github.com/withzombies/osquery-rust"
readme = "../README.md"
documentation = "https://docs.rs/osquery-rust-ng"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"

[lib]
name = "osquery_rust_ng"
path = "src/lib.rs"

[dependencies]
clap = { version = "^4.5.4", features = ["cargo", "derive"] }
strum = { version = "^0.26.2" }
strum_macros = { version = "^0.26.2" }
thrift = { version = "^0.17.0" }
log = "^0.4.27"
bitflags = "^2.9.0"
enum_dispatch = "^0.3.13"
serde_json = "^1.0.140"
signal-hook = "^0.3"

[features]
default = []
osquery-tests = []  # Tests requiring running osquery with autoloaded extensions

[dev-dependencies]
tempfile = "^3.14"
mockall = "0.13"
