[package]
name = "logger-file"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[[bin]]
name = "logger-file"
path = "src/main.rs"

[dependencies]
osquery-rust-ng = { path = "../../osquery-rust" }
clap = { version = "^4.5.40", features = ["derive"] }
env_logger = "^0.11"
log = "^0.4.27"
chrono = "^0.4"