[package]
name = "table-proc-meminfo"
version = "0.1.0"
authors = [
    "Tobias Mucke <tobias.mucke@gmail.com>",
]
description = "Interface to /proc/meminfo via osquery"
homepage = "https://github.com/polarlabs"
repository = "https://github.com/polarlabs/osquery-rust"
readme = "README.md"
documentation = "https://docs.rs/osquery-rust"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"

[dependencies]
# Clap version string according to Clap compatibility policy
clap = { version = "^3", features = ["cargo", "derive"] }
regex = { version = "1.10.4" }
osquery-rust = { path = "../../osquery-rust" }
