[package]
name = "writeable-table"
version = "0.1.0"
edition = "2024"

[package.metadata.release]
release = false

[lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"

[dependencies]
serde_json = "^1.0.140"
osquery-rust-ng = { path = "../../osquery-rust" }
clap = { version = "^4.5.40", features = ["derive"] }
env_logger = "^0.11"
log = "^0.4.27"
